# Prompt-Library

./: .gitignore  LICENSE  README.md  pl.py  pyproject.toml
pl/: __init__.py  commands.py  database.py  ledger.py  migrations.py  models.py  renderer.py  search.py  storage.py
prompts/development/: code-review.yaml
prompts/writing/: blog-post.yaml
tests/: conftest.py  test_commands.py  test_database.py  test_ledger.py  test_migrations.py  test_models.py  test_search.py  test_storage.py
tests/fixtures/prompts/analysis/: requirements-analysis.yaml  swot-analysis.yaml
tests/fixtures/prompts/development/: api-design.yaml
tests/fixtures/prompts/writing/: email-draft.yaml
