[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-library"
version = "0.2.0"
description = "A curated, searchable collection of reusable prompt templates for AI interactions"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
pl = "pl.commands:cli"

[tool.setuptools.packages.find]
include = ["pl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
